# percolator-matchers

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  PERCOLATOR_CROSSBREED_ANALYSIS.md  README.md  matcher-analysis.md  package.json  percolator-matchers-analysis.md  tsconfig.json
app/btc-keeper/src/: crank.ts  depeg-monitor.ts  index.ts  liquidator.ts
app/event-keeper/src/: index.ts  probability-sync.ts  settlement.ts
app/event-oracle/src/: index.ts  kalshi-adapter.ts  polymarket-adapter.ts  probability-feed.ts  signal-detector.ts
app/macro-keeper/src/: data-sources.ts  index.ts  macro-oracle-sync.ts  macro-signal-detector.ts
app/privacy-solver/src/: config.ts  encryption.ts  index.ts  solver.ts
app/vol-keeper/src/: crank.ts  index.ts  (+1 more)
docs/: event-matcher.md  jpy-matcher.md  macro-matcher.md  privacy-matcher.md  vol-matcher.md
programs/event-matcher/: Cargo.toml
programs/jpy-matcher/: Cargo.toml
programs/macro-matcher/: Cargo.toml
programs/privacy-matcher/: Cargo.toml
programs/privacy-matcher/src/: errors.rs  instructions.rs  lib.rs  match_engine.rs  state.rs
programs/vol-matcher/: Cargo.toml
scripts/: backtest.ts  setup-btc-devnet.ts  setup-devnet.ts  setup-event-devnet.ts  setup-jpy-devnet.ts  setup-macro-devnet.ts  setup-vol-market.ts  simulate-election.ts  test-compliance.ts  test-encrypted-trade.ts  test-jurisdiction.ts  test-macro-regime.ts  test-resolution.ts  vol-crank-bot.ts  vol-regime-test.ts
tests/: event-matcher.test.ts  jpy-matcher.test.ts  macro-matcher.test.ts  privacy-matcher.test.ts  vol-matcher.test.ts
(+48 files in other folders)
